--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -9,7 +9,7 @@
 html {
 	font-size: 62.5%;
 	font-family: "K2D", sans-serif;
-	background-color: #FEF0EF;
+	background-color: #fef0ef;
 }
 
 body {
@@ -17,5 +17,5 @@ body {
 }
 
 :root {
-    --height-header: 100px;
+	--height-header: 100px;
 }
